# SolVoid

./: .env.example  .eslintrc.js  .gitignore  .npmignore  ARCHITECTURE.md  Anchor.toml  CHALLENGES_FIXED_SUMMARY.md  CHANGELOG.md  CI_CD.md  CLI_DOCUMENTATION.md  CODE_OF_CONDUCT.md  COMMANDS.md  COMMANDS2.md  CONTRIBUTING.md  DATA_FLOW.md  DEMO_SCRIPT.md  DEMO_SUCCESS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  GETTING_STARTED.md  GITHUB_COMMIT_SUMMARY.md  GLOSSARY.md  HONEST_DEMO_STATUS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PRESENTATION_PLAN.md  QUICK_DEMO_COMMANDS.sh  QUICK_DEPLOY.md  QUICK_REAL_DEMO.sh  README.md  REAL_PROVEN_PPT_CONTENT.md  ROADMAP.md  SDK_DOCUMENTATION.md  SECURITY.md  STATUS.md  TESTING.md  TROUBLESHOOTING.md  USER_LOGIN_FEATURE.md  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md
.privacy-zero/: history.json
build-zk/: pot12_0001.ptau  verification_key.json  (+2 more)
program/: Cargo.toml
program/circuits/: deposit.circom  merkleTree.circom  withdraw.circom
program/src/: economics.rs  hash_tests.rs  lib.rs  nullifier_set.rs  poseidon.rs  poseidon_broken.rs  security_tests.rs  simple_poseidon_test.rs  validation.rs  verifier.rs
program/tests/: arithmetic_safety_test.rs  poseidon_simple_test.rs
programs/solvoid-zk/: Cargo.toml
programs/solvoid-zk/src/: economics.rs  economics_complex.rs  economics_old.rs  lib.rs  lib_minimal_working.rs  lib_old.rs  nullifier_set.rs  poseidon.rs  verifier.rs  verifier_old.rs  verifier_old2.rs  verifier_old3.rs
programs/solvoid-zk/tests/: solvoid_zk.rs
tests/integration/: Cargo.toml  atomic-rescue-engine.test.js  cross-component-hash-verification.test.ts  cross-platform-consistency.spec.ts  cross-platform-consistency.test.ts  cross_platform_test.rs  debug-poseidon.test.ts  end-to-end-circuit.test.ts  generate-vectors.ts  poseidon-integration.test.ts  zk-privacy.test.ts
(+243 files in other folders)
