[package]
name = "solvoid"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
borsh = "1.5.1"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
groth16-solana = "0.0.1"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
ark-serialize = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["sponge"] }
ark-bn254 = "0.4"
ark-ec = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ark-snark = "0.4"

[lints.rust]
unexpected_cfgs = "allow"

[[bin]]
name = "poseidon_test"
path = "bin/poseidon_test.rs"

[lib]
crate-type = ["cdylib", "lib"]
