[package]
name = "solvoid-zk"
version = "0.1.0"
description = "SolVoid ZK Verification Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solvoid_zk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-ec = "0.4.0"
groth16-solana = "0.2.0"
ark-crypto-primitives = { version = "0.4.0", features = ["sponge"] }
light-poseidon = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
