[package]
name = "cross_platform_test"
version = "0.1.0"
edition = "2021"

[dependencies]
solvoid = { path = "../../program" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "cross_platform_test"
path = "cross_platform_test.rs"
